--- a/我的唯美.html
+++ b/我的唯美.html
@@ -69,7 +69,7 @@
 		<div class="gouwuche">
 			<a href="我的购物车.html"><img src="img/首页/购物车.png"></a>
 		</div>
-		<a href="首页.html"><div class="btm_btn" style="margin-left:0.53rem;">
+		<a href="index.html"><div class="btm_btn" style="margin-left:0.53rem;">
 			<div class="btm_img"><img src="img/首页/底部按钮-首页.png"></div>
 			<p>首页</p>	
 		</div></a>
