--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	 <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">  
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="首页.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<script src="jquery-1.11.3.js"></script> 
 	<script src="rem.js"></script>
 </head>
